--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "echo \"STARTING SERVER TS...\" && ts-node-dev ./src/index.ts"
   },
   "dependencies": {
@@ -22,11 +22,16 @@
     "@eslint/json": "^0.13.1",
     "@eslint/markdown": "^7.1.0",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.32.0",
     "globals": "^16.3.0",
+    "jest": "^30.0.5",
     "jiti": "^2.5.1",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
