--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "echo \"STARTING SERVER TS...\" && ts-node-dev ./src/index.ts"
+    "build": "tsc",
+    "start": "echo \"STARTING SERVER TS...\" && ts-node-dev ./src/index.ts",
+    "production-build": "node ./build/index.js",
+    "postinstall": "echo \"COMMANDS AFTER INSTALL LIBS:\" && tsc",
+    "knex:migrate": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:latest",
+    "knex:rollback": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback",
+    "knex:rollback-all": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback --all",
+    "knex:seed": "knex --knexfile ./src/server/database/knex/Environment.ts seed:run"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "knex": "^3.1.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -30,10 +38,14 @@
     "globals": "^16.3.0",
     "jest": "^30.0.5",
     "jiti": "^2.5.1",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
+  },
+  "engines": {
+    "node": "24.x"
   }
 }
