feat: password encryptation (SignIn and SignUp)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "knex:seed": "knex --knexfile ./src/server/database/knex/Environment.ts seed:run && echo Run seeds to populate DB"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
@@ -29,6 +30,7 @@
     "@eslint/js": "^9.32.0",
     "@eslint/json": "^0.13.1",
     "@eslint/markdown": "^7.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/supertest": "^6.0.3",
