Added auth to tests

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PORT=
 NODE_ENV=
 IS_LOCALHOST=false
-JWT_SECRET=UNIQUE_SECRET_KEY
+JWT_SECRET=UNIQUE_SECRET_KEY # Random hash generated. Recomended to use one for each env (dev, prod, ...)
