Add PostgreSQL to prod env

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,10 @@ PORT=
 NODE_ENV=
 IS_LOCALHOST=false
 JWT_SECRET=UNIQUE_SECRET_KEY # Random hash generated. Recomended to use one for each env (dev, prod, ...)
+
+# DB variables not used in original '.env' file since it is set in host platform
+DB_HOST=
+DB_USER=
+DB_NAME=
+DB_PASSWORD=
+DB_PORT=5432
