--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "ts-node-dev ./src/index.ts && echo Start server",
     "production-start": "node ./build/index.js && echo Start server on prod",
     "postinstall": "tsc && echo Command run after install libs",
+    "preproduction": "echo Run scripts before production script is run",
     "knex:migrate": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:latest && echo Call migration up",
     "knex:rollback": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback && echo Call migration down for last mitration",
     "knex:rollback-all": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback --all && echo Call migration down for all tables",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
@@ -33,6 +35,7 @@
     "@eslint/json": "^0.13.1",
     "@eslint/markdown": "^7.1.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
